--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "drizzle-kit": "^0.25.0",
     "drizzle-orm": "^0.34.1",
     "express": "^4.21.1",
+    "luxon": "^3.5.0",
     "node-cron": "^3.0.3",
     "pg": "^8.13.0",
     "pg-pool": "^3.7.0",
