--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -11,5 +11,11 @@
         "src": "/(.*)",
         "dest": "server.js"
       }
+    ],
+    "cron":[
+      {
+        "path": "/api/cron",
+        "schedule": "* * * * *"
+      }
     ]
   }
