--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,7 +12,7 @@
         "dest": "server.js"
       }
     ],
-    "cron":[
+    "crons":[
       {
         "path": "/api/cron",
         "schedule": "* * * * *"
