--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
     "cors": "^2.8.5",
+    "csv-parse": "^5.5.6",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.25.0",
     "drizzle-orm": "^0.34.1",
     "express": "^4.21.1",
+    "express-fileupload": "^1.5.1",
     "luxon": "^3.5.0",
     "node-cron": "^3.0.3",
     "pg": "^8.13.0",
