--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "express-fileupload": "^1.5.1",
     "luxon": "^3.5.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
     "pg-pool": "^3.7.0",
     "web-push": "^3.6.7"
